Table and input changes

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -68,7 +68,7 @@
     </h4>
     </div>
 
-    <table class="table">
+    <table class="table table-striped">
       <tr>
         <th colspan="7">Professional service rendered in connection with</th>
         <!--<th>Quantity</th>-->
