--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -114,8 +114,8 @@
   </div>
   <div class="card-body">
 
-    <table class="table">
-      <thead>
+    <table class="table table-striped">
+      <thead class="orange lighten-2">
         <tr>
           <th>Invoice Id</th>
           <th>Performa Id</th>
