--- a/src/app/manufacturing-invoice/invoice.manu.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.component.html
@@ -64,7 +64,7 @@
             <i class="fa fa-plus">&nbsp;</i>AddRow</button>  
         </h4>
         </div>
-    <table class="table">
+    <table class="table table-striped">
       <tr>
         <th colspan="4" WIDTH="50%">Description</th>
         <th *ngIf="showSac">SAC Code</th>
