--- a/src/app/voucher/voucher.search.component.html
+++ b/src/app/voucher/voucher.search.component.html
@@ -71,8 +71,8 @@
     <small>list of vouchers</small>
   </div>
   <div class="card-body">
-    <table class="table">
-      <thead>
+    <table class="table table-striped">
+      <thead class="orange lighten-2">
         <tr>
           <th>Id</th>
           <th>Voucher Id</th>
