--- a/src/app/manufacturing-invoice/manufacturing-invoice.component.html
+++ b/src/app/manufacturing-invoice/manufacturing-invoice.component.html
@@ -63,7 +63,7 @@
     <span class="index">1</span>Particulars
   </h4>
 
-    <table class="table">
+    <table class="table table-striped">
       <tr>
         <th WIDTH="30%">Description</th>
         <th *ngIf="showSac">SAC Code</th>
