--- a/src/app/gen-invoice/gen-invoice.component.html
+++ b/src/app/gen-invoice/gen-invoice.component.html
@@ -69,14 +69,16 @@
          <th colspan="5">Particulars</th>
         </tr>
         <tr valign="top">
-         <th colspan="2">Description</th>
-         <th>Sac Code</th>
+         <th colspan="2" *ngIf="invoice.sacCode!=''">Description</th>
+         <th colspan="3" *ngIf="invoice.sacCode==''">Description</th>
+         <th *ngIf="invoice.sacCode!=''">Sac Code</th>
          <th>Rate</th>
          <th>Amount</th>
         </tr>
         <tr valign="top" *ngFor="let field of particulars;let i=index">
-         <td  colspan="2">{{field.itemDescription}}</td>
-         <td>{{invoice.sacCode}}</td>
+         <td  colspan="2"  *ngIf="invoice.sacCode!=''" >{{field.itemDescription}}</td>
+          <td  colspan="3"  *ngIf="invoice.sacCode==''" >{{field.itemDescription}}</td>
+         <td *ngIf="invoice.sacCode!=''" >{{invoice.sacCode}}</td>
         
          <td  align="right"><input [disabled]="invoice.type==='INVOICE'" class="form-control" style="width:100px;" (change)="calculateAmount(field)" type="number" [(ngModel)]="field.invoiceRate"/></td>
          <td  align="right">{{field.calculatedInvoiceAmount}}</td>
@@ -85,21 +87,21 @@
           <td colspan="4" align="right"><b>Sum</b></td>
           <td align="right">{{invoice.totalInvoiceBeforeTax}}</td>
         </tr>
-        <tr>
+        <tr *ngIf="invoice.cgstInvoicePercent!=0">
           <td colspan="3" align="right">
             CGST
           </td>
           <td  align="right">{{invoice.cgstInvoicePercent}}</td>
           <td  align="right">{{invoice.cgstInvoice}}</td>
         </tr>
-         <tr>
+         <tr *ngIf="invoice.sgstInvoicePercent!=0">
           <td colspan="3" align="right">
             SGST
           </td>
           <td align="right">{{invoice.sgstInvoicePercent}}</td>
           <td  align="right">{{invoice.sgstInvoice}}</td>
         </tr>
-         <tr>
+         <tr *ngIf="invoice.igstInvoicePercent!=0">
           <td colspan="3" align="right">
             IGST
           </td>
@@ -120,6 +122,6 @@
 </div>
 <div class="card">
   <div class="card-body">
-    <button class="btn btn-primary float-right" [disabled]="invoice.type==='INVOICE'" (click)="generateInvoice()">Generate Invoice</button>
+    <button class="btn btn-primary float-right" [disabled]="invoice.type==='INVOICE'" (click)="generateInvoice()"><i class="fa fa-cogs">&nbsp;</i>Generate Invoice</button>
   </div>
 </div>
