--- a/src/app/manufacturing-invoice/manufacturing-gen-invoice.component.html
+++ b/src/app/manufacturing-invoice/manufacturing-gen-invoice.component.html
@@ -63,34 +63,36 @@
          <th colspan="5">Particulars</th>
         </tr>
         <tr valign="top">
-         <th>Description</th>
-         <th>Sac Code</th>
+         <th *ngIf="manufacturingInvoice.sacCode==0" colspan="2">Description</th>
+         <th *ngIf="manufacturingInvoice.sacCode!=0" >Description</th>
+         <th *ngIf="manufacturingInvoice.sacCode!=0">Sac Code</th>
          <th>Quantity</th>
          <th>Rate</th>
          <th>Amount</th>
         </tr>
         <tr valign="top">
-         <td >{{manufacturingInvoice.itemDescription}}</td>
-         <td>{{manufacturingInvoice.sacCode}}</td>
+         <td *ngIf="manufacturingInvoice.sacCode==0" colspan="2">{{manufacturingInvoice.itemDescription}}</td>
+         <td *ngIf="manufacturingInvoice.sacCode!=0" >{{manufacturingInvoice.itemDescription}}</td>
+         <td *ngIf="manufacturingInvoice.sacCode!=0">{{manufacturingInvoice.sacCode}}</td>
          <td  align="right">{{manufacturingInvoice.quantity}}</td>
          <td  align="right"><input [disabled]="manufacturingInvoice.type==='INVOICE'" class="form-control" style="width:100px;" (change)="calculateAmount(manufacturingInvoice)" type="number" [(ngModel)]="manufacturingInvoice.invoiceRate"/></td>
          <td  align="right">{{manufacturingInvoice.grossInvoiceAmount}}</td>
         </tr>
-        <tr>
+        <tr *ngIf="manufacturingInvoice.cgstInvoicePercent!=0">
           <td colspan="3" align="right">
             CGST
           </td>
           <td  align="right">{{manufacturingInvoice.cgstInvoicePercent}}</td>
           <td  align="right">{{manufacturingInvoice.cgstInvoice}}</td>
         </tr>
-         <tr>
+         <tr *ngIf="manufacturingInvoice.cgstInvoicePercent!=0">
           <td colspan="3" align="right">
             SGST
           </td>
-          <td align="right">{{manufacturingInvoice.sgstInvoicePercent}}</td>
+          <td align="right">{{manufacturingInvoice.cgstInvoicePercent}}</td>
           <td  align="right">{{manufacturingInvoice.sgstInvoice}}</td>
         </tr>
-         <tr>
+         <tr *ngIf="manufacturingInvoice.igstInvoicePercent!=0">
           <td colspan="3" align="right">
             IGST
           </td>
@@ -108,7 +110,9 @@
 
 <div class="card" *ngIf="manufacturingInvoice.id">
   <div class="card-body">
-    <button class="btn btn-warning float-right" (click)="save()" [disabled]="manufacturingInvoice.type==='INVOICE'">Generate Invoice</button>
+    <button class="btn btn-warning float-right" (click)="save()" [disabled]="manufacturingInvoice.type==='INVOICE'">
+      <i class="fa fa-cogs">&nbsp;</i>
+      Generate Invoice</button>
   </div>
 </div>
 
