--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -36,6 +36,11 @@
             <li class="menu-item" *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}"><a routerLink="/voucher-search" class="waves-effect"><i class="fa fa-search mr-3"></i>Search</a></li>
           </ul>
         </li>
+         <li class="menu-item"  *appHasRole="{'role':['ADMIN'],'userRole':userRole}"><a><i class="fa fa-angle-down mr-3"></i>Reports</a>
+          <ul class="submenu">
+            <li class="menu-item"  *appHasRole="{'role':['ADMIN'],'userRole':userRole}"><a routerLink="/invoiceReport" class="waves-effect"><i class="fa fa-file-invoice mr-3"></i>Invoice</a></li>
+          </ul>
+        </li>
       </ul>
 
     </nav>
