--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -47,7 +47,7 @@
       <div class="col-md-2"><b>Proforma Date : </b></div>
       <div class="col-md-3">
         <input type="date" class="form-control underlined" name="proformaDate" id="proformaDate" required="true" [ngModel]="invoice.performaDate | date:'yyyy-MM-dd'"
-              (ngModelChange)="invoice.performaDate = $event" [value]="date | date:'yyyy-MM-dd'" [min]="minProformaDate" />
+              (ngModelChange)="invoice.performaDate = $event" [value]="date | date:'yyyy-MM-dd'" [min]="minProformaDate" [max]="curDate" />
       </div>
     </div>
     <div class="row">
