--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,12 @@
       <div class="profile-usertitle">
         <small>Logged in as :</small>
         <div class="profile-usertitle-name">
-          {{user.name}}  |
+          {{user.name}}
+           <!-- |
           <a href="#" title="edit profile">
 						<i class="fa fa-cog"></i>
-					</a> | <a href="/logout" title="logout">
+          </a> -->
+           | <a href="/logout" title="logout">
 						<i class="fa fa-sign-out-alt"></i>
 					</a>
         </div>
