voucher UI, create and edit is done.

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -58,12 +58,12 @@
           </div>
           <div class="md-form ">
             <label for="primaryEmail" [class.active]="true">Primary Email</label>
-            <input type="email" class="form-control underlined" name="primaryEmail" id="primaryEmail" placeholder="Enter Secondary email address"
+            <input type="email" class="form-control underlined" name="primaryEmail" id="primaryEmail"
               [(ngModel)]="company.primaryEmail" />
           </div>
           <div class="md-form ">
             <label for="secondaryEmail" [class.active]="true">Secondary Email</label>
-            <input type="email" class="form-control underlined" name="secondaryEmail" id="secondaryEmail" placeholder="Enter Secondary email address"
+            <input type="email" class="form-control underlined" name="secondaryEmail" id="secondaryEmail" 
               [(ngModel)]="company.secondaryEmail" />
           </div>
 
