--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.inp-border-bottom{
+    border-radius: 0 !important;;
+    border: none !important;
+    border-bottom: 1px solid #ced4da !important;
+}
+
+.inp-border-bottom:focus:not([readonly]){
+    box-shadow: 0 1px 0 0;
+    border-bottom: 1px solid #4285f4 !important;
+}
