--- a/src/app/voucher/voucher.search.component.html
+++ b/src/app/voucher/voucher.search.component.html
@@ -16,22 +16,22 @@
   <div class="card">
     <div class="card-header primary-color white-text">
       <h3> Search:</h3>
-      </div>
+    </div>
     <div class="card-body">
       <div class="form-group">
         <div class="row">
           <div class="col-md-4">
             <div class="md-form mt-1">
-            <label for="name">Voucher Id </label>
-            <input type="text" class="form-control underlined" name="voucherId" id="voucherId" required="false" [(ngModel)]="searchVoucher.voucherId"
-            />
+              <label for="name">Voucher Id </label>
+              <input type="text" class="form-control underlined" name="voucherId" id="voucherId" required="false"
+                [(ngModel)]="searchVoucher.voucherId" />
             </div>
           </div>
           <div class="col-md-4">
             <div class="md-form mt-1">
-            <label for="name">Vendor Name </label>
-            <input type="text" class="form-control underlined" name="vendorName" id="vendorName" required="false" [(ngModel)]="searchVoucher.vendorName"
-            />
+              <label for="name">Vendor Name </label>
+              <input type="text" class="form-control underlined" name="vendorName" id="vendorName" required="false"
+                [(ngModel)]="searchVoucher.vendorName" />
             </div>
           </div>
         </div>
@@ -40,16 +40,16 @@
         <div class="row">
           <div class="col-md-6">
             <div class="md-form mt-1">
-            <label for="startDt" class="active">Start Date </label>
-            <input type="date" class="form-control underlined" name="startDate" id="startDate" required="false" [(ngModel)]="searchVoucher.startDate"
-            />
+              <label for="startDt" class="active">Start Date </label>
+              <input type="date" class="form-control underlined" name="startDate" id="startDate" required="false"
+                [(ngModel)]="searchVoucher.startDate" />
             </div>
           </div>
           <div class="col-md-6">
             <div class="md-form mt-1">
-            <label for="endDt" class="active">End Date</label>
-            <input type="date" class="form-control underlined" name="endDate" id="endDate" required="false" [(ngModel)]="searchVoucher.endDate"
-            />
+              <label for="endDt" class="active">End Date</label>
+              <input type="date" class="form-control underlined" name="endDate" id="endDate" required="false"
+                [(ngModel)]="searchVoucher.endDate" />
             </div>
           </div>
         </div>
@@ -57,12 +57,12 @@
     </div>
     <div class="card-footer">
       <button type="submit" class="btn btn-primary float-right waves-effect m-0">
-              <i class="fa fa-search">&nbsp;</i>
-              Search</button>
+        <i class="fa fa-search">&nbsp;</i>
+        Search</button>
     </div>
   </div>
 </form>
-<br/>
+<br />
 <h5 class="sub-header">
   Search Result
 </h5>
@@ -80,6 +80,7 @@
           <th>Particulars</th>
           <th>Total Amount</th>
           <th>Voucher Date</th>
+          <th>Options</th>
         </tr>
       </thead>
       <tbody>
@@ -90,8 +91,69 @@
           <td>{{voucher.particulars}}</td>
           <td>{{voucher.totalAmount}}</td>
           <td>{{voucher.voucherDate | date:'yyyy-MM-dd hh:mm aa'}}</td>
+          <td>
+            <a routerLink="/voucherNew/{{voucher.id}}"
+              style="color:black;background-color:darksalmon;border:black solid 1px;" class="btn btn-sm p-2">E</a>
+            <a data-toggle="modal" data-target="#voucherDeleteModal"
+              style="color:white;background-color:Red;border:white solid 1px;" class="btn btn-sm p-2" (click)="getVoucher(voucher.id)">D</a>
+          </td>
         </tr>
       </tbody>
     </table>
+  </div>
+</div>
+
+<div class="modal fade" id="voucherDeleteModal" tabindex="-1" role="dialog" aria-labelledby="voucherDeleteModal"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header bg-danger">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Voucher</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+            <div class="col-md-6 ">
+                <b>Voucher ID :</b> {{voucher.id}}
+              </div>
+              <div class="col-md-6 ">
+                <b>On</b> : {{voucher.voucherDate}}
+              </div>
+              <div class="col-md-12 ">
+                  <b>Particulars :</b> {{voucher.particulars}}
+              </div>
+              <div class="col-md-6 ">
+                  <b>TotalAmount :</b> {{voucher.totalAmount}}
+              </div>
+              <div class="col-md-6 ">
+                  <b>NetAmount :</b> {{voucher.netAmount}}
+              </div>
+              <div class="col-md-12 ">
+                  <b> Address : </b>
+                  {{voucher.vendorName}},{{voucher.vendorAddressLine1}},
+                {{voucher.vendorAddressLine2}},{{voucher.vendorAddressCity}},{{voucher.vendorAddressState}}
+              </div>
+              <div class="col-md-6 ">
+                <b>Pan :</b> {{voucher.vendorPanNo}}
+              </div>
+              <div class="col-md-6 ">
+                  <b>Head Of Account :</b> {{voucher.headOfAccount}}
+                </div>
+              <div class="col-md-12 ">
+                  <b>Bank Details :</b> {{voucher.vendorBankAcctNo}},{{voucher.vendorBankName}},{{voucher.vendorBankBranch}},{{voucher.vendorBankBranchIfscCode}}
+              </div>
+              <div class="col-md-12 ">
+                  <b>GST :</b> <i>CGST</i>-{{voucher.cgstPercent}}%, <i>SGST</i>-{{voucher.sgstPercent}}% <i>IGST</i>-{{voucher.igstPercent}}%<br/>
+                  <b>TDS :</b> {{voucher.tdsPercent}}%
+              </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-sm btn-light" data-dismiss="modal">cancel</button>
+        <button type="button" class="btn btn-sm btn-danger" (click)="deleteVoucher(voucher.id)">Delete</button>
+      </div>
+    </div>
   </div>
 </div>
