Vendor screen completion

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -3,7 +3,6 @@
     <span>Manage Clients</span>
   </h3>
 <!-- Heading -->
-
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
@@ -40,7 +39,7 @@
   <div class="col-md-8">
     <form (ngSubmit)="submit()" name="clientForm" ngNativeValidate>
       <div class="card">
-        <div class="card-header primary-color white-text">
+        <div class="card-header stylish-color-dark white-text">
           <h3> Client details for Id:{{client.id}} </h3>
         </div>
         <div class="card-body">
