--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -38,7 +38,7 @@
   <div class="col-md-8">
     <form (ngSubmit)="submit()" name="userForm" ngNativeValidate>
       <div class="card">
-        <div class="card-header primary-color white-text" >
+        <div class="card-header stylish-color-dark white-text" >
           <h5> User </h5>
         </div>
         <div class="card-body">
