--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -12,7 +12,7 @@
 </div>
 <form (ngSubmit)="submitCompany()" name="companyForm" ngNativeValidate>
   <div class="card">
-    <div class="card-header primary-color white-text">
+    <div class="card-header stylish-color-dark white-text">
       <h5>Name : {{company.companyName}}</h5>
     </div>
     <div class="card-body">
