--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -9,7 +9,7 @@
 
 <form (ngSubmit)="submit()" name="searchForm" ngNativeValidate>
   <div class="card">
-    <div class="card-header primary-color white-text">
+    <div class="card-header stylish-color-dark white-text">
       <h3> Search:</h3>
     </div>
     <div class="card-body">
@@ -110,7 +110,7 @@
   <div class="card-body">
 
     <table class="table table-striped">
-      <thead class="orange lighten-2">
+      <thead class="orange lighten-4">
         <tr>
           <th>Invoice Id</th>
           <th>Performa Id</th>
