--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -12,7 +12,7 @@
 
 <form (ngSubmit)="saveVoucher()" name="voucherForm" ngNativeValidate>
   <div class="card">
-    <div class="card-header primary-color white-text" style="padding-left:20px;">
+    <div class="card-header stylish-color-dark white-text" style="padding-left:20px;">
       <label for="vendorName">Voucher Entry </label>
     </div>
     <div class="card-body">
