--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -108,7 +108,7 @@
 }
 
 .companyMenu {
-	background-color: #fd9f5d;
+	background-color:#a9becc; 
 	width: 100%;
 	color:black
 }
@@ -123,7 +123,7 @@
 
 .company-icon {
 	float: right;
-	border-left: 1px solid #fd9347;
+	border-left:1px solid #8fa1ad; 
 	height: 100%;
 	padding: 10px;
 	font-size: 18px;
@@ -272,3 +272,7 @@ select {
 	color:#000;
 	font-weight: 500;
 }
+
+.primary-color,.bg-primary,.btn-primary {
+	background-color:#07689F !important;
+} 
