--- a/src/app/invoice/invoice.search.component.html
+++ b/src/app/invoice/invoice.search.component.html
@@ -1,16 +1,18 @@
 <h3 class="mb-2 mb-sm-0 pt-1 pb-2">
       <span>Search Invoice</span>
     </h3>
-
 <!-- Heading -->
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
-
+<div class="searchBox" *ngIf="visible" [@slideInOut]>
 <form (ngSubmit)="submit()" name="searchForm" ngNativeValidate>
   <div class="card">
     <div class="card-header stylish-color-dark white-text">
-      <h3> Search:</h3>
+      Search
+      <button type="button" class="close white-text" (click)="showSearch()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     <div class="card-body">
       <div class="form-group">
@@ -90,7 +92,7 @@
       </div>
     </div>
     <div class="card-footer">
-      <button type="submit" class="btn btn-primary float-right">
+      <button type="submit" class="btn btn-sm btn-primary float-right m-0">
               <i class="fa fa-search">&nbsp;</i>
               Search</button>
       <!-- <button type="reset" class="btn btn-secondary float-right">
@@ -99,13 +101,16 @@
     </div>
   </div>
 </form>
-<br/>
-<h5 class="sub-header">
-  Search Result
-</h5>
+</div>
 <div class="card">
   <div class="card-header rgba-blue-light">
-    <small>Displaying {{searchResult.numberOfElements}}/{{searchResult.totalElements}} items in this page</small>
+    <button class="btn btn-circle purple darken-4" (click)="showSearch()"><i  class="fa fa-search"></i></button>&nbsp;
+       <small>
+         Displaying {{searchResult.numberOfElements}}/{{searchResult.totalElements}} items in this page
+         for [ Category={{searchInvoice.category}}, Performa Id={{searchInvoice.performaId}}, Invoice Id={{searchInvoice.invoiceId}},
+         Status={{searchInvoice.status}}, Client={{searchInvoice.clientId}}, Type={{searchInvoice.type}}, 
+         StartDate={{searchInvoice.invoiceStDate}}, EndDate={{searchInvoice.invoiceEdDate}} ]
+       </small>
   </div>
   <div class="card-body">
 
