--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -15,13 +15,14 @@
       <div class="row">
         <div class="col-md-3 border-right field-labels">
           <label for="voucherId" [class.active]="true">Voucher Id</label>
-          <input type="text" class="form-control underlined" name="voucherId" id="voucherId" [(ngModel)]="voucher.voucherId" />
+          <input type="text" readonly class="form-control underlined" name="voucherId" id="voucherId" [(ngModel)]="voucher.voucherId"
+          />
         </div>
 
         <div class="col-md-3 border-right field-labels">
           <label for="voucherDate" [class.active]="true">Voucher Date</label>
-          <input type="date" class="form-control underlined" name="voucherDate" id="voucherDate" [(ngModel)]="voucher.createdDate"
-            [value]="date | date:'yyyy-MM-dd'" [max]="curDate" />
+          <label  class="form-control underlined">{{voucher.createdDate | date:'yyyy-MM-dd'}}</label>
+
         </div>
 
         <div class="col-md-3 border-right field-labels">
@@ -43,20 +44,20 @@
           Select Vendor
         </div>
         <div class="col-md-3 border-right">
-          <select [ngModelOptions]="{standalone: true}" (change)="loadSelectedVendor()" class="form-control underlined" [(ngModel)]="selVendorId">
+          <select [ngModelOptions]="{standalone: true}" (change)="loadSelectedVendors()" class="form-control underlined" [(ngModel)]="selectedVendorId">
         <option></option>
-        <option *ngFor="let vendor of vendors" [ngValue]="vendor.id" [selected]="vendor.id === selVendorId">{{vendor.name}}</option>
+        <option *ngFor="let vendor of vendors" [ngValue]="vendor.id" [selected]="vendor.id === selectedVendorId">{{vendor.name}}</option>
          </select>
         </div>
+
+
 
         <div class="col-md-2 text-right field-labels">
           Head of Account
         </div>
-        <div class="col-md-4 border-right">
-          <!--  <select [ngModelOptions]="{standalone: true}" (change)="loadSelectedVendor()" class="form-control underlined" [(ngModel)]="selVendorId">
-        <option></option>
-        <option *ngFor="let vendor of vendors" [ngValue]="vendor.id" [selected]="vendor.id === selVendorId">{{vendor.name}}</option>
-         </select>-->
+        <div class="col-md-3 text-right field-labels">
+          <textarea rows="1" type="text" class="form-control underlined" name="headOfAccount" id="headOfAccount" [(ngModel)]="voucher.headOfAccount">
+            </textarea>
         </div>
       </div>
 
@@ -77,7 +78,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="netAmount" id="netAmount" [(ngModel)]="voucher.netAmount"
-          />
+            (change)="calculateVoucherTotal()" />
         </div>
         <div class="col-md-2">
         </div>
@@ -93,7 +94,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="cgstAmount" id="cgstAmount" [(ngModel)]="voucher.cgstAmount"
-          />
+            (change)="calculateVoucherTotal()" />
         </div>
         <div class="col-md-2">
         </div>
@@ -113,7 +114,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="sgstAmount" id="sgstAmount" [(ngModel)]="voucher.sgstAmount"
-          />
+            (change)="calculateVoucherTotal()" />
         </div>
         <div class="col-md-2">
         </div>
@@ -122,7 +123,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="tdsAmount" id="tdsAmount" [(ngModel)]="voucher.tdsAmount"
-          />
+            (change)="calculateVoucherTotal()" />
         </div>
       </div>
 
@@ -133,7 +134,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="igstAmount" id="igstAmount" [(ngModel)]="voucher.igstAmount"
-          />
+            (change)="calculateVoucherTotal()" />
         </div>
         <div class="col-md-2">
         </div>
@@ -141,7 +142,8 @@
           Others
         </div>
         <div class="col-md-1">
-          <input type="text" class="form-control inp-border-bottom" name="others" id="others" [(ngModel)]="voucher.others" />
+          <input type="text" class="form-control inp-border-bottom" name="others" id="others" [(ngModel)]="voucher.others" (change)="calculateVoucherTotal()"
+          />
         </div>
       </div>
 
@@ -152,7 +154,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="reimbursement" id="reimbursement" [(ngModel)]="voucher.reimbursement"
-          />
+            (change)="calculateVoucherTotal()" />
         </div>
         <div class="col-md-2">
         </div>
@@ -163,6 +165,7 @@
           <input type="text" class="form-control inp-border-bottom" name="totalAmount" id="totalAmount" [(ngModel)]="voucher.totalAmount"
           />
         </div>
+        <button type="button" class="btn btn-info float-right" (click)="calculateVoucherTotal()">Calculate</button>
       </div>
       <hr/>
       <div class="row">
@@ -182,7 +185,9 @@
           <input type="text" class="form-control inp-border-bottom" name="deductionRemark" id="deductionRemark" [(ngModel)]="voucher.deductionRemark"
           />
         </div>
+
       </div>
+
 
     </div>
     <div class="card-footer">
